// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-jWBwVP bkWzVl"
  >
    <div
      class="sc-hmzhuo iOsHzv"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-jWBwVP bkWzVl"
  >
    <div
      class="sc-hmzhuo iOsHzv"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-gqjmRU gAZTeo"
  >
    <table
      class="sc-dVhcbM shCeT"
    >
      <tbody
        class="sc-eqIVtm bEfEsF"
      >
        <tr
          class="sc-caSCKo iKBXer"
        >
          <td
            class="sc-gisBJw fZnzOc"
          >
            Server version
          </td>
          <td
            class="sc-kjoXOD hpTAeq"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-caSCKo iKBXer"
        >
          <td
            class="sc-gisBJw fZnzOc"
          >
            Server address
          </td>
          <td
            class="sc-kjoXOD hpTAeq"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-caSCKo iKBXer"
        >
          <td
            class="sc-gisBJw fZnzOc"
          >
            Query
          </td>
          <td
            class="sc-kjoXOD hpTAeq"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-caSCKo iKBXer"
        >
          <td
            class="sc-gisBJw fZnzOc"
          >
            Summary
            <div
              class="sc-fAjcbJ gGrROY fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-kjoXOD hpTAeq"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-caSCKo iKBXer"
        >
          <td
            class="sc-gisBJw fZnzOc"
          >
            Response
            <div
              class="sc-fAjcbJ gGrROY fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-kjoXOD hpTAeq"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
